--- a/“build_makemore_backprop_ninja_ipynb”的副本.ipynb
+++ b/“build_makemore_backprop_ninja_ipynb”的副本.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8sFElPqq8PPp"
       },
@@ -32,8 +32,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "ChBbac4y8PPq"
       },
       "outputs": [],
@@ -46,52 +49,52 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# download the names.txt file from github\n",
-        "!wget https://raw.githubusercontent.com/karpathy/makemore/master/names.txt"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "x6GhEWW18aCS",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "e22d8c60-cd97-4842-d622-7977303bb79f"
+        "id": "x6GhEWW18aCS",
+        "outputId": "c6b5e7f7-09a4-444a-b6d5-425b750ae114"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "--2024-06-29 12:43:15--  https://raw.githubusercontent.com/karpathy/makemore/master/names.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2024-06-30 01:53:18--  https://raw.githubusercontent.com/karpathy/makemore/master/names.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 228145 (223K) [text/plain]\n",
             "Saving to: ‘names.txt’\n",
             "\n",
-            "names.txt           100%[===================>] 222.80K  --.-KB/s    in 0.05s   \n",
+            "names.txt           100%[===================>] 222.80K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2024-06-29 12:43:15 (4.44 MB/s) - ‘names.txt’ saved [228145/228145]\n",
+            "2024-06-30 01:53:19 (1.86 MB/s) - ‘names.txt’ saved [228145/228145]\n",
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# download the names.txt file from github\n",
+        "!wget https://raw.githubusercontent.com/karpathy/makemore/master/names.txt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "klmu3ZG08PPr",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "ffe54f3e-4ffc-4ba8-ca4b-825b38b7f466"
+        "id": "klmu3ZG08PPr",
+        "outputId": "f4446870-c1b0-4b1e-c00c-fe98623c613b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "32033\n",
             "15\n",
@@ -109,18 +112,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "id": "BCQomLE_8PPs",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "1df19396-c50f-41f3-eb23-38f522642f30"
+        "id": "BCQomLE_8PPs",
+        "outputId": "d50dd1cd-fcd8-4869-d7f6-29431c8a8078"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{1: 'a', 2: 'b', 3: 'c', 4: 'd', 5: 'e', 6: 'f', 7: 'g', 8: 'h', 9: 'i', 10: 'j', 11: 'k', 12: 'l', 13: 'm', 14: 'n', 15: 'o', 16: 'p', 17: 'q', 18: 'r', 19: 's', 20: 't', 21: 'u', 22: 'v', 23: 'w', 24: 'x', 25: 'y', 26: 'z', 0: '.'}\n",
             "27\n"
@@ -140,18 +143,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "id": "V_zt2QHr8PPs",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "7f87b2a1-93d2-41e6-c000-5578ad1ed1d4"
+        "id": "V_zt2QHr8PPs",
+        "outputId": "9939972b-d8b2-4a89-8bfb-a5a93906e736"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "torch.Size([182625, 3]) torch.Size([182625])\n",
             "torch.Size([22655, 3]) torch.Size([22655])\n",
@@ -192,8 +195,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "eg20-vsg8PPt"
       },
       "outputs": [],
@@ -203,8 +209,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "MJPU8HT08PPu"
       },
       "outputs": [],
@@ -219,18 +228,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
-        "id": "ZlFLjQyT8PPu",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "ef5d2abe-052f-45a5-8a6c-a43cb3cb76e1"
+        "id": "ZlFLjQyT8PPu",
+        "outputId": "0a346b20-f78d-4e81-95d5-03578715db84"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "4137\n"
           ]
@@ -264,8 +273,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "QY-y96Y48PPv"
       },
       "outputs": [],
@@ -279,24 +291,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "id": "8ofj1s6d8PPv",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "82f50ebc-190b-4b6c-8a0c-20e9b5f3154a"
+        "id": "8ofj1s6d8PPv",
+        "outputId": "304ba51e-668b-42cf-8469-44335c23b7d5"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(3.3491, grad_fn=<NegBackward0>)"
+              "tensor(3.3346, grad_fn=<NegBackward0>)"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -342,44 +354,44 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Xb.shape, emb.shape, C.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
         "id": "YjudY21pBfdt",
-        "outputId": "5af5392d-a106-4bfd-c47a-ffab84f4e329"
+        "outputId": "b6493ee3-4091-4d37-ba80-cb6826a8b90c"
       },
-      "execution_count": 83,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(torch.Size([32, 3]), torch.Size([32, 3, 10]), torch.Size([27, 10]))"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 83
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "Xb.shape, emb.shape, C.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
-        "id": "mO-8aqxK8PPw",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
-        "outputId": "80362e65-3c8a-48d4-a5a1-aed07b78b01c"
+        "id": "mO-8aqxK8PPw",
+        "outputId": "515ad316-ff91-41ef-ac8c-c383b966b1de"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "logprobs        | exact: True  | approximate: True  | maxdiff: 0.0\n",
             "probs           | exact: True  | approximate: True  | maxdiff: 0.0\n",
@@ -393,20 +405,20 @@
             "W2              | exact: True  | approximate: True  | maxdiff: 0.0\n",
             "b2              | exact: True  | approximate: True  | maxdiff: 0.0\n",
             "hpreact         | exact: False | approximate: True  | maxdiff: 4.656612873077393e-10\n",
-            "bngain          | exact: False | approximate: True  | maxdiff: 1.1641532182693481e-09\n",
-            "bnbias          | exact: False | approximate: True  | maxdiff: 2.7939677238464355e-09\n",
+            "bngain          | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
+            "bnbias          | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
             "bnraw           | exact: False | approximate: True  | maxdiff: 4.656612873077393e-10\n",
-            "bnvar_inv       | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
+            "bnvar_inv       | exact: False | approximate: True  | maxdiff: 2.2118911147117615e-09\n",
             "bnvar           | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n",
-            "bndiff2         | exact: False | approximate: True  | maxdiff: 2.9103830456733704e-11\n",
-            "bndiff          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n",
-            "bnmeani         | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
+            "bndiff2         | exact: False | approximate: True  | maxdiff: 4.3655745685100555e-11\n",
+            "bndiff          | exact: False | approximate: True  | maxdiff: 4.656612873077393e-10\n",
+            "bnmeani         | exact: False | approximate: True  | maxdiff: 1.862645149230957e-09\n",
             "hprebn          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n",
-            "embcat          | exact: False | approximate: True  | maxdiff: 1.3969838619232178e-09\n",
-            "W1              | exact: False | approximate: True  | maxdiff: 5.587935447692871e-09\n",
+            "embcat          | exact: False | approximate: True  | maxdiff: 1.862645149230957e-09\n",
+            "W1              | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
             "b1              | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
-            "emb             | exact: False | approximate: True  | maxdiff: 1.3969838619232178e-09\n",
-            "C               | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n"
+            "emb             | exact: False | approximate: True  | maxdiff: 1.862645149230957e-09\n",
+            "C               | exact: False | approximate: True  | maxdiff: 7.450580596923828e-09\n"
           ]
         }
       ],
@@ -506,9 +518,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ebLtYji_8PPw"
+        "colab": {
+          "background_save": true
+        },
+        "id": "ebLtYji_8PPw",
+        "outputId": "39ff72c9-4c2d-4e84-f67e-e84eb2a26db5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3.33463191986084 diff: 0.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Exercise 2: backprop through cross_entropy but all in one go\n",
         "# to complete this challenge look at the mathematical expression of the loss,\n",
@@ -533,11 +557,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "-gCXbB4C8PPx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SZhR6W5J1iIA",
+        "outputId": "62824a21-47c4-43ab-c18f-69b1913780ba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([32, 27]), torch.Size([32]), torch.Size([32]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
+      "source": [
+        "logits.shape, Yb.shape, dlogits[range(logits.shape[0]), Yb].shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "-gCXbB4C8PPx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83a270d2-e3f2-488a-94e5-54e742f88f47"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "logits          | exact: False | approximate: True  | maxdiff: 8.149072527885437e-09\n"
+          ]
+        }
+      ],
       "source": [
         "# backward pass\n",
         "\n",
@@ -545,8 +607,10 @@
         "# YOUR CODE HERE :)\n",
         "dlogits = None # TODO. my solution is 3 lines\n",
         "# -----------------\n",
-        "\n",
-        "#cmp('logits', dlogits, logits) # I can only get approximate to be true, my maxdiff is 6e-9"
+        "dlogits = F.softmax(logits, dim=1)\n",
+        "dlogits[range(logits.shape[0]), Yb] -= 1\n",
+        "dlogits /= logits.shape[0]\n",
+        "cmp('logits', dlogits, logits) # I can only get approximate to be true, my maxdiff is 6e-9"
       ]
     },
     {
@@ -815,6 +879,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -831,10 +899,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.5"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
